--- a/app/src/main/res/layout/activity_show.xml
+++ b/app/src/main/res/layout/activity_show.xml
@@ -11,11 +11,12 @@
         android:id="@+id/textViewName"
         android:layout_width="111dp"
         android:layout_height="90dp"
-        android:layout_marginBottom="260dp"
+        android:layout_marginTop="216dp"
         android:text="TextView"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         tools:ignore="UnknownId" />
 
     <TextView
@@ -23,12 +24,12 @@
         android:layout_width="111dp"
         android:layout_height="87dp"
         android:text="TextView"
-        app:layout_constraintBottom_toTopOf="@+id/textViewName"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.644" />
+        app:layout_constraintTop_toBottomOf="@+id/textViewName"
+        app:layout_constraintVertical_bias="0.368" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
