--- a/app/src/main/res/layout/activity_show.xml
+++ b/app/src/main/res/layout/activity_show.xml
@@ -12,7 +12,7 @@
         android:layout_width="111dp"
         android:layout_height="90dp"
         android:layout_marginTop="216dp"
-        android:text="TextView"
+        android:text="Name"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -23,7 +23,7 @@
         android:id="@+id/textViewShoeSize"
         android:layout_width="111dp"
         android:layout_height="87dp"
-        android:text="TextView"
+        android:text="ShoeSize"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
